<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:stretchColumns="*" >

        <TextView
            android:id="@id/text_dbname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20.0sp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/btn_danxuan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_danxuan" />

            <Button
                android:id="@id/btn_duoxuan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_duoxuan" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/btn_tiankong"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_tiankong" />

            <Button
                android:id="@id/btn_panduan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_panduan" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/btn_jianda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_jianda" />

            <Button
                android:id="@id/btn_jisuan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_jisuan" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@id/btn_tuxiang"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_tuxiang" />

            <Button
                android:id="@id/btn_lunshu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_lunshu" />
        </TableRow>

        <Button
            android:id="@id/btn_random"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_random" />

        <Button
            android:id="@id/btn_seldb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_seldb" />

        <Button
            android:id="@id/btn_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_exit" />
    </TableLayout>

</ScrollView>